--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Anton|Jura&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&family=Ubuntu:ital,wght@0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Personal Portfolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <nav
+      class="navbar navbar-expand-lg bg-body-tertiary customNav"
+      data-bs-theme="dark"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
         <button
@@ -36,19 +41,15 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#">Features</a>
             <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </div>
         </div>
       </div>
     </nav>
     <!-- Jumbotron -->
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3 rockBackground">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3 heroBackground">
       <div class="container-fluid py-5 jumboCopy">
-        <h1 class="display-5 fw-bold">It's Time to Rock</h1>
-        <p class="col-md-12 fs-4">
-          Rock Nation brings you the most headbanging shows on the planet. Click
-          below to find tickets for your favorite bands
-        </p>
+        <h1 class="display-5 fw-bold">Hello There</h1>
+        <p class="col-md-12 fs-4">Nice to meet you</p>
         <button class="btn btn-primary btn-lg" type="button">
           Buy Tickets
         </button>
