Added grid feature to about me and my work and added place holder images

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </nav>
     <!-- Jumbotron -->
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3 heroBackground">
+    <div class="p-5 mb-4 bg-body-tertiary heroBackground">
       <div class="container-fluid py-5 jumboCopy">
         <h1 class="display-5 fw-bold">Hello There</h1>
         <p class="col-md-12 fs-4">Nice to meet you</p>
@@ -56,6 +56,48 @@
       </div>
     </div>
     <!-- End jumbotron -->
+    <div class="container-fluid aboutText">
+      <div class="row">
+        <div class="col-4">
+          <h3>About Me</h3>
+        </div>
+        <div class="col-2">
+          <img src="/images/kyoyo2019.jpg" alt="" />
+        </div>
+        <div class="col-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            nec iaculis mauris. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Phasellus nec iaculis mauris. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            nec iaculis mauris. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Phasellus nec iaculis mauris. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid projects">
+      <div class="row">
+        <div class="col-4">
+          <h3>My Work</h3>
+        </div>
+        <div class="col-8">
+          <a class="firstProject" href="">First Project</a>
+        </div>
+        <div class="col-4"></div>
+        <div class="col-4">
+          <a class="secoundProject" href="">Secound Project</a>
+        </div>
+        <div class="col-4">col3</div>
+        <div class="col-4"></div>
+        <div class="col-4">
+          <a class="secoundProject" href="">Secound Project</a>
+        </div>
+        <div class="col-4">col3</div>
+      </div>
+    </div>
     <!-- Popper.js, then Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
