Added more project images as a place holders and linkded them via clases

--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
         <div class="col-4">
           <a class="secoundProject" href="">Secound Project</a>
         </div>
-        <div class="col-4">col3</div>
+        <div class="col-4">
+          <a class="thirdProject" href="">Third Project</a>
+        </div>
         <div class="col-4"></div>
         <div class="col-4">
-          <a class="secoundProject" href="">Secound Project</a>
+          <a class="fourthProject" href="">Fourth Project</a>
         </div>
-        <div class="col-4">col3</div>
+        <div class="col-4">Fifth Project</div>
       </div>
     </div>
     <!-- Popper.js, then Bootstrap JS -->
