Added cards to my work section and added hover effects to the cards

--- a/index.html
+++ b/index.html
@@ -83,21 +83,88 @@
         <div class="col-4">
           <h3>My Work</h3>
         </div>
-        <div class="col-8">
-          <a class="firstProject" href="">First Project</a>
+        <div class="col-4">
+          <div class="card" style="width: 28rem">
+            <img
+              src="/images/digital-marketing-meeting.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card" style="width: 28rem">
+            <img
+              src="/images/Screenshot 2023-10-08 at 19.31.01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
         <div class="col-4"></div>
-        <div class="col-4">
-          <a class="secoundProject" href="">Secound Project</a>
+        <div class="col-2 thirdProject">
+          <div class="card" style="width: 18rem">
+            <img
+              src="/images/expanding hover.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
-        <div class="col-4">
-          <a class="thirdProject" href="">Third Project</a>
+        <div class="col-2 fourthProject">
+          <div class="card" style="width: 18rem">
+            <img src="/images/drum-kit.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
-        <div class="col-4"></div>
-        <div class="col-4">
-          <a class="fourthProject" href="">Fourth Project</a>
+        <div class="col-2 fifthProject">
+          <div class="card" style="width: 18rem">
+            <img
+              src="/images/simmons-game.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
-        <div class="col-4">Fifth Project</div>
       </div>
     </div>
     <!-- Popper.js, then Bootstrap JS -->
