Added links to two projects

--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a
+                href="https://janeks111.github.io/rerefactoring-more-accessible/"
+                class="btn btn-primary"
+                >Horiseon SEO</a
+              >
             </div>
           </div>
         </div>
@@ -113,7 +117,11 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a
+                href="https://janeks111.github.io/personal-portfolio-CSS-HTML/"
+                class="btn btn-primary"
+                >Janeks Portfolio</a
+              >
             </div>
           </div>
         </div>
@@ -131,7 +139,7 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Expanding Cards</a>
             </div>
           </div>
         </div>
@@ -144,7 +152,7 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Drum Kit</a>
             </div>
           </div>
         </div>
@@ -161,7 +169,7 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Simon Says Game</a>
             </div>
           </div>
         </div>
