--- a/index.html
+++ b/index.html
@@ -175,6 +175,18 @@
         </div>
       </div>
     </div>
+    <section class="page-section contact" id="contact">
+      <div class="footer">
+        <h2>Contact Me</h2>
+        <div class="socialLinks">
+          <a href="https://github.com/Janeks111" class="gh">GitHub</a>
+          <a href="https://www.instagram.com/pharaohthefirst/" class="ig"
+            >Instagram</a
+          >
+          <a href="mailto:dusttodust94@icloud.com" class="mail">Email</a>
+        </div>
+      </div>
+    </section>
     <!-- Popper.js, then Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
