--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       data-bs-theme="dark"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Janeks Portfolio</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,9 +38,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link active" aria-current="page" href="#about"
+              >About Me</a
+            >
+            <a class="nav-link" href="#work">My Work</a>
+            <a class="nav-link" href="#contact">Contact Me</a>
           </div>
         </div>
       </div>
@@ -48,23 +50,22 @@
     <!-- Jumbotron -->
     <div class="p-5 mb-4 bg-body-tertiary heroBackground">
       <div class="container-fluid py-5 jumboCopy">
-        <h1 class="display-5 fw-bold">Hello There</h1>
-        <p class="col-md-12 fs-4">Nice to meet you</p>
-        <button class="btn btn-primary btn-lg" type="button">
-          Buy Tickets
-        </button>
+        <h1 class="display-5 fw-bold">Hello There👋🏻</h1>
+        <p class="col-md-12 fs-4">
+          Help yourself and play around with my projects
+        </p>
       </div>
     </div>
     <!-- End jumbotron -->
-    <div class="container-fluid aboutText">
+    <div class="container-fluid aboutText" id="about">
       <div class="row">
-        <div class="col-4">
+        <div class="col-sm-12 col-md-12 col-lg-4">
           <h3>About Me</h3>
         </div>
-        <div class="col-2">
+        <div class="col-sm-12 col-md-12 col-lg-2">
           <img src="/images/kyoyo2019.jpg" alt="" />
         </div>
-        <div class="col-6">
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
             nec iaculis mauris. Lorem ipsum dolor sit amet, consectetur
@@ -78,13 +79,13 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid projects">
+    <div class="container-fluid projects" id="work">
       <div class="row">
-        <div class="col-4">
+        <div class="col-sm-12 col-md-12 col-lg-4">
           <h3>My Work</h3>
         </div>
-        <div class="col-4">
-          <div class="card" style="width: 28rem">
+        <div class="col-sm-12 col-md-12 col-lg-4">
+          <div class="card">
             <img
               src="/images/digital-marketing-meeting.jpg"
               class="card-img-top"
@@ -104,8 +105,8 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
-          <div class="card" style="width: 28rem">
+        <div class="col-sm-12 col-md-12 col-lg-4">
+          <div class="card">
             <img
               src="/images/Screenshot 2023-10-08 at 19.31.01.png"
               class="card-img-top"
@@ -125,9 +126,9 @@
             </div>
           </div>
         </div>
-        <div class="col-4"></div>
-        <div class="col-2 thirdProject">
-          <div class="card" style="width: 18rem">
+        <div class="col-sm-12 col-md-12 col-lg-4"></div>
+        <div class="col-sm-12 col-md-12 col-lg-2 thirdProject">
+          <div class="card">
             <img
               src="/images/expanding hover.png"
               class="card-img-top"
@@ -143,8 +144,8 @@
             </div>
           </div>
         </div>
-        <div class="col-2 fourthProject">
-          <div class="card" style="width: 18rem">
+        <div class="col-sm-12 col-md-12 col-lg-2 fourthProject">
+          <div class="card">
             <img src="/images/drum-kit.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -156,8 +157,8 @@
             </div>
           </div>
         </div>
-        <div class="col-2 fifthProject">
-          <div class="card" style="width: 18rem">
+        <div class="col-sm-12 col-md-12 col-lg-2 fifthProject">
+          <div class="card">
             <img
               src="/images/simmons-game.png"
               class="card-img-top"
