Replaced the space holders for text with the text and added styles to profile image

--- a/index.html
+++ b/index.html
@@ -67,14 +67,12 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            nec iaculis mauris. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Phasellus nec iaculis mauris. Lorem ipsum dolor sit
-            amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            nec iaculis mauris. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Phasellus nec iaculis mauris. Lorem ipsum dolor sit
-            amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+            Hi there👋🏻! My name is Janeks and I am front end web developer. I am
+            currently in the middle of front end web developer bootcamp. At the
+            end of this bootcamp I will become proficient in HTML5, CSS3, JS,
+            ES6 jQuery, API, Bootstrap, Font Awesome, Figma, Photoshop, Node.js
+            and React. If your are interested in the projects I have done so far
+            please look bellow this section.
           </p>
         </div>
       </div>
@@ -92,15 +90,15 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Horiseon SEO</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                In this porject I had a task to make the web page more accseible
+                and refactore the code.
               </p>
               <a
                 href="https://janeks111.github.io/rerefactoring-more-accessible/"
                 class="btn btn-primary"
-                >Horiseon SEO</a
+                >Open</a
               >
             </div>
           </div>
@@ -113,15 +111,15 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Janeks Portfolio</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                This was my first portfolio posted on GitHub. Made with HTML and
+                CSS.
               </p>
               <a
                 href="https://janeks111.github.io/personal-portfolio-CSS-HTML/"
                 class="btn btn-primary"
-                >Janeks Portfolio</a
+                >Open</a
               >
             </div>
           </div>
@@ -135,12 +133,11 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Expanding Cards</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                I made this project while I was playing with Hover effects.
               </p>
-              <a href="#" class="btn btn-primary">Expanding Cards</a>
+              <a href="#" class="btn btn-primary">Open</a>
             </div>
           </div>
         </div>
@@ -148,12 +145,12 @@
           <div class="card">
             <img src="/images/drum-kit.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Drum Kit</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                My first project that used JavaScript. Works with key press and
+                mouse.
               </p>
-              <a href="#" class="btn btn-primary">Drum Kit</a>
+              <a href="#" class="btn btn-primary">Open</a>
             </div>
           </div>
         </div>
@@ -165,12 +162,12 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Simon Says Game</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Simon Says Game that will check your memory. Made with JS, HTML
+                and CSS.
               </p>
-              <a href="#" class="btn btn-primary">Simon Says Game</a>
+              <a href="#" class="btn btn-primary">Open</a>
             </div>
           </div>
         </div>
