--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Link to Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <!-- Link to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&family=Ubuntu:ital,wght@0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <!-- Link to custom styles -->
     <link rel="stylesheet" href="css/styles.css" />
     <title>Personal Portfolio</title>
   </head>
   <body>
+    <!-- Navigation Bar -->
     <nav
       class="navbar navbar-expand-lg bg-body-tertiary customNav"
       data-bs-theme="dark"
@@ -56,7 +60,7 @@
         </p>
       </div>
     </div>
-    <!-- End jumbotron -->
+    <!-- About Me Section -->
     <div class="container-fluid aboutText" id="about">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-4">
@@ -77,6 +81,7 @@
         </div>
       </div>
     </div>
+    <!-- Projects Section -->
     <div class="container-fluid projects" id="work">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-4">
@@ -173,6 +178,7 @@
         </div>
       </div>
     </div>
+    <!-- Contact Section -->
     <section class="page-section contact" id="contact">
       <div class="footer">
         <h2>Contact Me</h2>
@@ -185,7 +191,7 @@
         </div>
       </div>
     </section>
-    <!-- Popper.js, then Bootstrap JS -->
+    <!-- JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
       integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
