Added alternative text to images and links to projects

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h3>About Me</h3>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-2">
-          <img src="/images/kyoyo2019.jpg" alt="" />
+          <img src="/images/kyoyo2019.jpg" alt="My profile picture" />
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6">
           <p>
@@ -92,7 +92,7 @@
             <img
               src="/images/digital-marketing-meeting.jpg"
               class="card-img-top"
-              alt="..."
+              alt="Image with people in meeting"
             />
             <div class="card-body">
               <h5 class="card-title">Horiseon SEO</h5>
@@ -113,7 +113,7 @@
             <img
               src="/images/Screenshot 2023-10-08 at 19.31.01.png"
               class="card-img-top"
-              alt="..."
+              alt="Image of portfolio"
             />
             <div class="card-body">
               <h5 class="card-title">Janeks Portfolio</h5>
@@ -135,27 +135,39 @@
             <img
               src="/images/expanding hover.png"
               class="card-img-top"
-              alt="..."
+              alt="Image of two picturs with hover effect"
             />
             <div class="card-body">
               <h5 class="card-title">Expanding Cards</h5>
               <p class="card-text">
                 I made this project while I was playing with Hover effects.
               </p>
-              <a href="#" class="btn btn-primary">Open</a>
+              <a
+                href="https://janeks111.github.io/Hover-animation-CSS/"
+                class="btn btn-primary"
+                >Open</a
+              >
             </div>
           </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-2 fourthProject">
           <div class="card">
-            <img src="/images/drum-kit.png" class="card-img-top" alt="..." />
+            <img
+              src="/images/drum-kit.png"
+              class="card-img-top"
+              alt="Image with drums"
+            />
             <div class="card-body">
               <h5 class="card-title">Drum Kit</h5>
               <p class="card-text">
                 My first project that used JavaScript. Works with key press and
                 mouse.
               </p>
-              <a href="#" class="btn btn-primary">Open</a>
+              <a
+                href="https://janeks111.github.io/drum-kit-JS/"
+                class="btn btn-primary"
+                >Open</a
+              >
             </div>
           </div>
         </div>
@@ -164,7 +176,7 @@
             <img
               src="/images/simmons-game.png"
               class="card-img-top"
-              alt="..."
+              alt="Image of four colourd squares"
             />
             <div class="card-body">
               <h5 class="card-title">Simon Says Game</h5>
@@ -172,7 +184,11 @@
                 Simon Says Game that will check your memory. Made with JS, HTML
                 and CSS.
               </p>
-              <a href="#" class="btn btn-primary">Open</a>
+              <a
+                href="https://janeks111.github.io/simon-says-game-js/"
+                class="btn btn-primary"
+                >Open</a
+              >
             </div>
           </div>
         </div>
