Fix for error with images

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h3>About Me</h3>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-2">
-          <img src="/images/kyoyo2019.jpg" alt="My profile picture" />
+          <img src="./images/kyoyo2019.jpg" alt="My profile picture" />
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6">
           <p>
@@ -90,7 +90,7 @@
         <div class="col-sm-12 col-md-12 col-lg-4">
           <div class="card">
             <img
-              src="/images/digital-marketing-meeting.jpg"
+              src="./images/digital-marketing-meeting.jpg"
               class="card-img-top"
               alt="Image with people in meeting"
             />
@@ -111,7 +111,7 @@
         <div class="col-sm-12 col-md-12 col-lg-4">
           <div class="card">
             <img
-              src="/images/Screenshot 2023-10-08 at 19.31.01.png"
+              src="./images/Screenshot 2023-10-08 at 19.31.01.png"
               class="card-img-top"
               alt="Image of portfolio"
             />
@@ -133,7 +133,7 @@
         <div class="col-sm-12 col-md-12 col-lg-2 thirdProject">
           <div class="card">
             <img
-              src="/images/expanding hover.png"
+              src="./images/expanding hover.png"
               class="card-img-top"
               alt="Image of two picturs with hover effect"
             />
@@ -153,7 +153,7 @@
         <div class="col-sm-12 col-md-12 col-lg-2 fourthProject">
           <div class="card">
             <img
-              src="/images/drum-kit.png"
+              src="./images/drum-kit.png"
               class="card-img-top"
               alt="Image with drums"
             />
@@ -174,7 +174,7 @@
         <div class="col-sm-12 col-md-12 col-lg-2 fifthProject">
           <div class="card">
             <img
-              src="/images/simmons-game.png"
+              src="./images/simmons-game.png"
               class="card-img-top"
               alt="Image of four colourd squares"
             />
